# imgui-c--c

./: .gitignore  CMakeLists.txt  imconfig.h.in  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_helper.cpp  imgui_helper.h  imgui_internal.h  imgui_tables.cpp  imgui_texture.cpp  imgui_texture.h  imgui_user.h  imgui_widgets.cpp  immat.cpp  immat.h
addon/Dither/: CMakeLists.txt
addon/Dither/inc/: libdither.h
addon/Dither/src/: dither_dbs.cpp  dither_dotdiff.cpp  dither_dotlippens.cpp  dither_errordiff.cpp  dither_grid.cpp  dither_kallebach.cpp  dither_ordered.cpp  dither_pattern.cpp  dither_threshold.cpp  dither_varerrdiff.cpp  ditherimage.c
addon/Dither/test/: test.c
addon/ImMaskCreator/: CMakeLists.txt
addon/ImMaskCreator/Include/: ImMaskCreator.h  MatFilter.h  MatIo.h  MatMath.h  MatUtilsCommDef.h  MatUtilsImguiHelper.h  Morph.h
addon/ImMaskCreator/Src/: Contour2Mask.cpp  Contour2Mask.h  ImMaskCreatorImpl.cpp  ImMaskCreatorTest.cpp  MatFilter.cpp  MatIo.cpp  MatMath.Internal.h  MatMath.Simd.h  MatMath.cpp  MatUtilsMath.h  Morph.Simd.h  Morph.cpp  SimdOpt.cpp  SimdOpt.h  SysUtils.cpp  SysUtils.h
addon/ImMaskCreator/Src/SimdIntrinsic/: IntrinAvx.h  IntrinCpp.h  IntrinSse.hpp
addon/ImVulkanShader/: CMakeLists.txt  ImVulkanShader.cpp  ImVulkanShader.h  imvk_allocator.cpp  imvk_command.cpp  imvk_command.h  imvk_copy_make_border.cpp  imvk_copy_make_border.h  imvk_gpu.cpp  imvk_gpu.h  imvk_image_mat.h  imvk_mat.h  imvk_mat_shader.h  imvk_option.cpp  imvk_platform.h  imvk_substract_mean_normalize.cpp  imvk_substract_mean_normalize.h  imvk_substract_mean_normalize_shader.h  imvk_vulkan_header_fix.h
addon/ImVulkanShader/cmake/: generater_shader_comp.cmake  precompile_shader_spv.cmake
addon/ImVulkanShader/effects/: Lighting_shader.h  Lighting_vulkan.cpp  Star_shader.h  Star_vulkan.cpp  Star_vulkan.h  Sway_shader.h  Sway_vulkan.cpp
addon/ImVulkanShader/filters/: ALM_shader.h  ALM_vulkan.cpp  AlphaBlending_shader.h  AlphaBlending_vulkan.cpp  Bilateral_shader.h  Bilateral_vulkan.cpp  BookFlip_shader.h  BookFlip_vulkan.cpp  BookFlip_vulkan.h  Bounce_shader.h  Bounce_vulkan.cpp  BowTie_shader.h  Brightness_shader.h  Brightness_vulkan.cpp  ButterflyWave_shader.h  ButterflyWave_vulkan.cpp  CAS_shader.h  CAS_vulkan.cpp  CIE_shader.h  CIE_vulkan.cpp  Canny_shader.h  Canny_vulkan.cpp  ChromaKey_vulkan.cpp  ChromaKey_vulkan.h  ColorBalance_shader.h  ColorBalance_vulkan.cpp  ColorBalance_vulkan.h  ColorConvert_shader.h  ColorConvert_vulkan.cpp  ColorConvert_vulkan.h  ColorCurve_shader.h  ColorCurve_vulkan.cpp  ColorInvert_shader.h  ColorInvert_vulkan.cpp  Concat_shader.h  Concat_vulkan.cpp  Contrast_shader.h  Contrast_vulkan.cpp  CopyTo_vulkan.cpp  Crop_shader.h  (+68 more)
addon/ImVulkanShader/filters/lut3d/: Lut3D.cpp  Lut3D.h
addon/ImVulkanShader/fusions/: AlphaBlending_shader.h  AlphaBlending_vulkan.cpp  AlphaBlending_vulkan.h  BookFlip_shader.h  BookFlip_vulkan.cpp  Bounce_shader.h  BowTie_vulkan.cpp  BurnOut_shader.h  BurnOut_vulkan.cpp  Burn_shader.h  Burn_vulkan.cpp  CannabisLeaf_shader.h  CannabisLeaf_vulkan.cpp  CircleBlur_shader.h  CircleBlur_vulkan.cpp  CircleCrop_shader.h  CircleCrop_vulkan.cpp  ColorPhase_shader.h  ColorPhase_vulkan.cpp  ColourDistance_shader.h  ColourDistance_vulkan.cpp  CrazyParametric_shader.h  CrazyParametric_vulkan.cpp  CrossWarp_shader.h  CrossWarp_vulkan.cpp  CrossZoom_shader.h  CrossZoom_vulkan.cpp  Crosshatch_shader.h  Crosshatch_vulkan.cpp  Cube_shader.h  Cube_vulkan.cpp  DirectionalWarp_shader.h  DirectionalWarp_vulkan.cpp  DoomScreen_shader.h  DoomScreen_vulkan.cpp  Door_vulkan.cpp  Doorway_shader.h  Doorway_vulkan.cpp  DreamyZoom_shader.h  DreamyZoom_vulkan.cpp  (+63 more)
addon/ImVulkanShader/internals/: AlphaBlending_shader.h  AlphaBlending_vulkan.cpp  AlphaBlending_vulkan.h  Binary_vulkan.cpp  ColorConvert_shader.h  ColorConvert_vulkan.cpp  ColorConvert_vulkan.h  Concat_vulkan.cpp  Crop_vulkan.cpp  Resize_shader.h  Resize_vulkan.cpp  Transpose_vulkan.cpp  warpAffine_shader.h  warpAffine_vulkan.cpp  warpPerspective_vulkan.cpp
addon/ImVulkanShader/others/: ColorConvert_shader.h  ColorConvert_vulkan.cpp  ColorConvert_vulkan.h  Copy_make_border.cpp  Flip_vulkan.cpp  Resize_shader.h  Substract_mean_normalize.cpp  warpAffine_vulkan.cpp
addon/ImVulkanShader/scopes/: CIE_shader.h  CIE_vulkan.cpp  Harris_vulkan.cpp  Histogram_shader.h  Histogram_vulkan.cpp  Vector_shader.h  Vector_vulkan.cpp  Waveform_shader.h  Waveform_vulkan.cpp
addon/ImVulkanShader/test/: ImVulkan_tests.cpp
backends/: imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_osx.mm  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdl3.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_wgpu.cpp  imgui_impl_win32.cpp  imgui_impl_win32.h
docs/: CHANGELOG.txt  ImCoolbar.md  ImGuiFileDialog.md  README.md
fonts/: Inconsolata.cpp  Tahoma.cpp  mono_hei.cpp  mono_narrow.cpp  mono_sarasa.cpp  mono_weihei.cpp
icons/: IconsCodicons.h  IconsFontAwesome6Brands.h  IconsLucide.h  folder.h  icons.cpp  icons.h
misc/: DynObjectLoader.h  stb_image.h  stb_image_resize2.h  stb_image_write.h
test/: example_apple_metal.mm  example_application.cpp  example_emscripten_glfw_opengl3.cpp  example_emscripten_opengl3.cpp  example_emscripten_sdl2_opengl3.cpp  example_emscripten_wgpu.cpp  example_glfw_metal.mm  example_glfw_opengl3.cpp  example_glfw_vulkan.cpp  example_glfw_wgpu.cpp  example_glut_opengl2.cpp  example_obj_viewer.cpp  example_objviewer.cpp  example_sdl2_opengl2.cpp  example_sdl2_opengl3.cpp  example_sdl2_rendering.cpp  example_sdl2_sdlrenderer2.cpp  example_sdl2_vulkan.cpp  example_sdl_opengl2.cpp  example_sdl_opengl3.cpp  example_sdl_vulkan.cpp  example_win32_directx10.cpp  example_win32_directx11.cpp  example_win32_directx12.cpp  example_win32_directx9.cpp  immat_test.cpp  show_fonts.cpp  wgpu_index.html
(+108 files in other folders)
